--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hello,My name is <span class="name">Shakil Ahmed</span></h3>
+                            <h3 class="hello">Hello,My name is <span class="name">Saiful Islam</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Web Developer</span></h3>
                             <p>I am a Mern Stack Web Developer and Web Designer. An Open Source enthusiast and a
                                 Computer Science student from Bangladesh.
@@ -470,7 +470,7 @@
             <i class="fas fa-cog fa-spin"></i>
         </div>
         <div class="day-night s-icon">
-            <i class="fas "></i>
+            <i class="fas"></i>
         </div>
         <h4>Theme colors</h4>
         <div class="colors">
