--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="images/saiful.jpg" alt="">
+                            <img src="images/shakil.jpg" alt="">
                         </div>
                     </div>
                 </div>
